--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,6 @@ inputs:
 
 runs:
   using: "docker"
-  image: docker.pkg.github.com/embarkstudios/cargo-deny-action/action:v0.1.0
+  image: "docker://docker.pkg.github.com/embarkstudios/cargo-deny-action/action:v0.1.0"
   args:
     - ${{ inputs.command }}
